@@ -18,8 +18,10 @@ SYS_FUNC(seccomp)
 	unsigned int act;
 
 	/* operation */
-	printxval(seccomp_ops, op, "SECCOMP_SET_MODE_???");
-	tprint_arg_next();
+	if (entering(tcp)) {
+		printxval(seccomp_ops, op, "SECCOMP_SET_MODE_???");
+		tprint_arg_next();
+	}
 
 	switch (op) {
 	case SECCOMP_GET_ACTION_AVAIL:
@@ -32,6 +34,29 @@ SYS_FUNC(seccomp)
 			tprint_indirect_begin();
 			printxval(seccomp_ret_action, act, "SECCOMP_RET_???");
 			tprint_indirect_end();
+		}
+		break;
+
+	case SECCOMP_GET_NOTIF_SIZES:
+		if (entering(tcp)) {
+			/* flags */
+			PRINT_VAL_X(flags);
+			tprint_arg_next();
+
+			return 0;
+		} else {
+			struct seccomp_notif_sizes szs;
+
+			/* args */
+			if (!umove_or_printaddr(tcp, tcp->u_arg[2], &szs)) {
+				tprint_struct_begin();
+				PRINT_FIELD_U(szs, seccomp_notif);
+				tprint_struct_next();
+				PRINT_FIELD_U(szs, seccomp_notif_resp);
+				tprint_struct_next();
+				PRINT_FIELD_U(szs, seccomp_data);
+				tprint_struct_end();
+			}
 		}
 		break;
 
