@@ -1,0 +1,2 @@
+#define INJECT_RETVAL 1
+#include "seccomp_get_notif_sizes.c"
